--- a/project/views/page/index.html.twig
+++ b/project/views/page/index.html.twig
@@ -100,5 +100,45 @@
         ]
     }) }}
 
+    {{ components.KeyFeaturesComponent({
+        "type": "KeyFeaturesComponent",
+        "title": "Наши преимущества",
+        "description": "Затеяли ремонт? Нужен грамотный специалист в области сантехники? Вы попали по адресу. Мы — команда профессионалов в области сантехнических работ и установки сантехнического оборудования, и готовы предложить, лучшие решения по вопросам сантехники.",
+        "features": [
+            "Бесплатный выезд специалиста и консультации",
+            "Советы по выбору сантехники",
+            "Использование только высококачественных материалов",
+            "Конкретные сроки выполнения работ",
+            "Гарантия на выполненные работы 3 года",
+            "Опытный и адекватный персонал"
+        ],
+        "button": {
+            "exists": false,
+            "caption": "Кнопень",
+            "url": "http://vk.com"
+        },
+        "image": "/backs/75813-512.jpg",
+        "opinions": [
+        {
+            "text": "Работой ребят довольна ! Приехали вовремя. Заказывала замену труб воды и радиаторов.Работа выполнена качественно! Спасибо )",
+            "rating": 5,
+            "photo": "/avatars/no_avatar.jpg",
+            "signature": "Любовь Михайловна"
+        },
+        {
+            "text": "Спасибо монтажникам СВК24 Белорукову Виктору и Хатыпову Муслиму  за профессионализм в работе и хорошее отношение !!! Буду теперь заказывать только у Вас!!!",
+            "rating": 5,
+            "photo": "/avatars/no_avatar.jpg",
+            "signature": "Туюшева Галя"
+        },
+        {
+            "text": "Спасибо компании СВК24 за установленные батареи и счётчики на воду. Сами посоветовали нужные счётчики, установили. Сняли пластиковую панель за которой были трубы, сами установили обратно. Управляющая компания приняла все документы, зарегистрировала, всё чётко. Всё отлично работает и дешевле, чем у УК. Батареи тоже установлены были быстро, всё красиво, старые батареи, трубы спилены. Теперь можно выпускать воздух и регулировать подачу воды. Супер! Спасибо большое за отличную работу. Буду рекомендовать вас всем знакомым! 👍",
+            "rating": 5,
+            "photo": "/avatars/XHp8jZ3dTIQ.jpg",
+            "signature": "Шурупов Евгений"
+        }
+        ]
+    }) }}
+
 {% endblock %}
 
