Сделал страницы услуг

--- a/project/views/components/components.html.twig
+++ b/project/views/components/components.html.twig
@@ -70,7 +70,7 @@
                                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                                     <p>{{ item.description | raw }}</p>
                                 </div>
-                                {#<a class="item-link" href="#"></a>#}
+                                <a class="item-link" href="/services/{{ item.id }}"></a>
                             </div><!--//item-content-->
                         </div><!--//item-inner-->
                     </div><!--//item-->
