--- a/project/views/layout/base.html.twig
+++ b/project/views/layout/base.html.twig
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>{% block title %}{{ page.title }}{% if page.title|length > 0 %} | {% endif %}Самарская водопроводная компания{% endblock %}</title>
+    <title>{% block title %}{{ pageTitle }}{% if pageTitle|length > 0 %} | {% endif %}Самарская водопроводная компания{% endblock %}</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
