--- a/project/views/layout/base.html.twig
+++ b/project/views/layout/base.html.twig
@@ -106,13 +106,7 @@
 
 {% block javascripts %}{% endblock %}
 
-<!— Yandex.Metrika informer —>
-<a href="https://metrika.yandex.ru/stat/?id=45462144&amp;from=info.."
-   target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/45462144/3_1_ECFFECFF_CCF.."
-                                       style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="45462144" data-lang="ru" /></a>
-<!— /Yandex.Metrika informer —>
-
-<!— Yandex.Metrika counter —>
+<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
     (function (d, w, c) {
         (w[c] = w[c] || []).push(function() {
@@ -141,7 +135,7 @@
     })(document, window, "yandex_metrika_callbacks");
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/45462144" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!— /Yandex.Metrika counter —>
+<!-- /Yandex.Metrika counter -->
 
 <!-- RedConnect -->
 <script id="rhlpscrtg" type="text/javascript" charset="utf-8" async="async" src="https://web.redhelper.ru/service/main.js?c=xatipoff1632"></script>
