--- a/project/views/page/index.html.twig
+++ b/project/views/page/index.html.twig
@@ -6,8 +6,8 @@
 {% block body %}
 
     {{ top.action({
-        header : 'Сантехнические работы быстро недорого и качественно',
-        descriptor : 'Позвони сейчас и закажи работы по самой выгодной цене',
+        header : 'Заказать сервис с месяцем обслуживания бесплатно',
+        descriptor : 'Позвони сейчас и закажи установку сервиса с реализацией вашего уникального функционала',
         callToAction : {
             header : 'Сделать заявку',
             enterNameCaption : 'Ваше имя',
@@ -15,146 +15,19 @@
             enterPhoneCaption : 'Ваш телефон'
         },
         carouselImages : [
-            '/aqua/wylis-gayvaniloba.jpg',
-            '/aqua/CAM00197.jpg',
-            '/aqua/imag0707.jpg',
-            '/aqua/6-12.jpg'
+            '/index/top/hero-2.jpg',
+            '/index/top/hero-about.jpg',
+            '/index/top/hero-blog.jpg',
+            '/index/top/hero-career.jpg',
+            '/index/top/hero-contact.jpg',
         ]
     }) }}
 
     {{ nav.pageNav([
-        {'id': 'customers-section', 'title': 'Наши услуги'},
+        {'id': 'buytogether-section', 'title': 'Купи вместе'},
         {'id': 'features-section', 'title': 'Наши преимущества'},
     ]) }}
 
-    {{ components.ServicesComponent({
-        title : 'Наши услуги',
-        intro : 'Мы предлагаем широкий спектр услуг в сфере водоснабжения.',
-        list : [
-            {
-                title : 'Замена труб <br>водоснабжения',
-                description : 'Компания <strong style="white-space: nowrap;">&laquo;Самарская водопроводная компания&raquo;</strong> предлагает услуги по монтажу и замене водопроводных труб в квартире, доме, а так же производственных помещениях.',
-                image : '/i/services/1.jpg',
-                id : 1
-            }, {
-                title : 'Замена стояков <br>водоснабжения',
-                description : 'Для замены стояков водоснабжения мы используем современные полипропиленовые трубы известных фирм производителей, таких как Pilsa, Valtec, Firat, Kalde.',
-                image : '/i/services/2.jpg',
-                id : 2
-            }, {
-                title : 'Установка <br>водосчётчиков',
-                description : 'Сегодня в связи с постоянным ростом тарифов на услуги ЖКХ, установка водосчетчиков является весьма актуальной, так как позволяет значительно снизить суммы счетов за коммунальные услуги.',
-                image : '/i/services/3.jpg',
-                id : 3,
-                mobileHidden : true
-            }, {
-                title : 'Установка и замена <br>смесителей',
-                description : 'Сломался смеситель? Нет времени ехать и покупать новый? Звоните нам, мы поможем. Специалисты нашей компании приобретут для Вас смеситель и произведут его установку в удобное для Вас время.',
-                image : '/i/services/4.jpg',
-                id : 4
-            }, {
-                title : 'Замена труб <br>канализации',
-                description : 'Для замены труб канализации мы используем современные пластиковые трубы, которые в отличие от старых чугунных труб, имеют более привлекательный внешний вид, и увеличенный срок службы.',
-                image : '/i/services/5.jpg',
-                id : 5
-            }, {
-                title : 'Устновка и замена <br>радиаторов отопления',
-                description : 'Специалисты нашей компании бесплатно приедут и произведут расчет стоимости работ по замене батарей отопления в вашей квартире, доме или офисе.',
-                image : '/i/services/6.jpg',
-                id : 6
-            }, {
-                title : 'Замена <br>полотенцесушителя',
-                description : 'Для замены полотенцесушителей в Самаре мы используем современные высококачественные материалы, хорошо зарекомендовавшие себя как в процессе работы, так и в процессе эксплуатации.',
-                image : '/i/services/7.jpg',
-                id : 7
-            }, {
-                title : 'Установка <br>инсталяции',
-                description : 'Если Вы решили произвести установку инсталяции в своем туалете, важно обратить внимание на то, какая инсталяция необходима в вашем конкретном случае.',
-                image : '/i/services/8.jpg',
-                id : 8
-            }, {
-                title : 'Установка <br>ванны',
-                description : 'Сотрудники нашей компании произведут качественную установку акриловых, чугунных, стальных, пластиковых и металлических ванн, а так же ванн с гидромассажем.',
-                image : '/i/services/9.jpg',
-                id : 9
-            }, {
-                title : 'Установка <br>унитаза',
-                description : 'Мы производим установку унитазов всех видов, независимо от типа и фирмы производителя. Если вам необходимо произвести замену старого унитаза на новый, вы так же можете обратиться к нам, мы вам поможем.',
-                image : '/i/services/10.jpg',
-                id : 10
-            }, {
-                title : 'Установка мойки <br>и раковины',
-                description : 'Специалисты нашей компании приедут и произведут профессиональный монтаж мойки в вашей квартире, доме или офисе.',
-                image : '/i/services/11.jpg',
-                id : 11
-            }, {
-                title : 'Отопление частных домов <br>и коттеджей',
-                description : 'Для монтажа систем отопления мы используем качественные материалы, хорошо зарекомендовавшие себя в процессе работы и эксплуатации. На все выполненные работы мы предоставляем гарантию сроком на 36 месяцев.',
-                image : '/i/services/12.jpg',
-                id : 12,
-            }, {
-                title : 'Установка и подключение <br>стиральных машин',
-                description : 'Вам необходимо установить стиральную машину на кухне или в ванной, в квартире или в частном доме, вы можете заказать установку стиральной машинки в нашей компании. Если в вашей квартире не установлен кран для забора воды и не смонтирован слив в канализацию, мы сделаем это.',
-                image : '/i/services/13.jpg',
-                id : 13
-            }, {
-                title : 'Установка и подключение <br>посудомоечных машин',
-                description : 'Все работы по подключению и установке проводят высококвалифицированные специалисты <strong style="white-space: nowrap;">&laquo;Самарской Водопроводной Компании&raquo;</strong>.',
-                image : '/i/services/14.jpg',
-                id : 14
-            }, {
-                title : 'Установка <br>водонагревателей',
-                description : '',
-                image : '/i/services/15.jpg',
-                id : 15
-            }, {
-                title : 'Установка и сборка <br>душевых кабин',
-                description : 'Если вам необходимо произвести установку душевой кабины в квартире, доме или другом помещении, вы можете обратиться за помощью в нашу компанию. Мы производим сборку, установку и замену душевых кабин любых типов и фирм производителей.',
-                image : '/i/services/16.jpg',
-                id : 16
-            }
-        ]
-    }) }}
-
-    {{ components.KeyFeaturesComponent({
-        "type": "KeyFeaturesComponent",
-        "title": "Наши преимущества",
-        "description": "Затеяли ремонт? Нужен грамотный специалист в области сантехники? Вы попали по адресу. Мы — команда профессионалов в области сантехнических работ и установки сантехнического оборудования, и готовы предложить, лучшие решения по вопросам сантехники.",
-        "features": [
-            "Бесплатный выезд специалиста и консультации",
-            "Советы по выбору сантехники",
-            "Использование только высококачественных материалов",
-            "Конкретные сроки выполнения работ",
-            "Гарантия на выполненные работы 3 года",
-            "Опытный и адекватный персонал"
-        ],
-        "button": {
-            "exists": false,
-            "caption": "Кнопень",
-            "url": "http://vk.com"
-        },
-        "image": "/backs/75813-512.jpg",
-        "opinions": [
-        {
-            "text": "Работой ребят довольна ! Приехали вовремя. Заказывала замену труб воды и радиаторов.Работа выполнена качественно! Спасибо )",
-            "rating": 5,
-            "photo": "/avatars/no_avatar.jpg",
-            "signature": "Любовь Михайловна"
-        },
-        {
-            "text": "Спасибо монтажникам СВК24 Белорукову Виктору и Хатыпову Муслиму  за профессионализм в работе и хорошее отношение !!! Буду теперь заказывать только у Вас!!!",
-            "rating": 5,
-            "photo": "/avatars/no_avatar.jpg",
-            "signature": "Туюшева Галя"
-        },
-        {
-            "text": "Спасибо компании СВК24 за установленные батареи и счётчики на воду. Сами посоветовали нужные счётчики, установили. Сняли пластиковую панель за которой были трубы, сами установили обратно. Управляющая компания приняла все документы, зарегистрировала, всё чётко. Всё отлично работает и дешевле, чем у УК. Батареи тоже установлены были быстро, всё красиво, старые батареи, трубы спилены. Теперь можно выпускать воздух и регулировать подачу воды. Супер! Спасибо большое за отличную работу. Буду рекомендовать вас всем знакомым! 👍",
-            "rating": 5,
-            "photo": "/avatars/XHp8jZ3dTIQ.jpg",
-            "signature": "Шурупов Евгений"
-        }
-        ]
-    }) }}
 
 {% endblock %}
 
