Добавил плагин x-editable для bootstrap3

--- a/project/views/page/buytogether.html.twig
+++ b/project/views/page/buytogether.html.twig
@@ -14,7 +14,7 @@
             "caption" : "",
             "url" : ""
         },
-        "header" : "Веб-сервис совместных покупок &laquo;Купи вместе&raquo;",
+        "header" : "Веб-сервис совместных покупок &laquo;Купи&nbsp;вместе&raquo;",
         "descriptor" : "Закажи удобный сервис по самой низкой цене и получи установку с обучением бесплатно",
         "background" : "/buytogether/featured6.jpg"
     }) }}
