--- a/project/views/layout/base.html.twig
+++ b/project/views/layout/base.html.twig
@@ -56,7 +56,7 @@
                         }
                     ] %}
                     {% for p in pages %}
-                        <li class="{% if p.slug == slug %}active {% endif %}nav-item"><a href="/{{ p.slug }}">{{ p.title }}</a></li>
+                        <li class="{% if p.slug == page.slug %}active {% endif %}nav-item"><a href="/{{ p.slug }}">{{ p.title }}</a></li>
                     {% endfor %}
                 </ul><!--//nav-->
             </div><!--//navabr-collapse-->
